# gt-configurator

./: .gitignore  CMakeLists.txt  ahp-gt-configurator.desktop  app.rc  brew.sh.cmake  config.h.cmake  files.gt-configurator.cmake  gt-configurator.desktop  gt-configurator.iss  gt-configurator.iss.cmake  gt1.2023.json  gt1.json  gt1_lock.json  gt2axis1.json  gt2axis3.json  gt2axis5.json  gt2axis6.json  gt2axis8.json  gt2dec.json  gt2dec_brake.json  gt2dec_lock.json  gt2dec_locked.json  gt2ra.json  gt2ra_brake.json  gt2ra_lock.json  gt2ra_locked.json  gt5.json  gt5_brake.json  gt5_lock.json  gt5_locked.json  gt5axis2.json  gt5axis4.json  gt5axis7.json  gt5axis9.json  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resource.qrc  threads.h  (+1 more)
debian/: changelog  control  control.gt-configurator  copyright  files  gt_configurator.install
debian/gt-configurator/usr/share/applications/: GT-Configurator.desktop
dfu/: dfu.c  dfu.h  dfu_file.c  portable.h
driver/: ahpbootloader.cat  gt1bootloader.cat  gt1bootloader.inf  gtdir.cat  gtdir.inf
